<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/logo_name"
                android:textColor="@color/app_primary"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="34sp"
                android:clickable="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/txt_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/logo_note"
                android:textStyle="italic"
                style="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/grey_600"
                android:layout_below="@+id/txt_logo"
                android:layout_alignEnd="@+id/txt_logo" />
        </RelativeLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:weightSum="1">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/txt_ph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ph_hnint"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="12dp"
                style="@style/TextAppearance.AppCompat.Small"
                android:singleLine="true"
                android:textColorHint="@color/grey_0" />
            <!--android:textColorHint="@color/abc_primary_text_material_dark" />-->
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_password"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hnint"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="12dp"
                android:singleLine="true"
                android:textColorHint="@color/grey_0" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_0"
            android:layout_marginTop="4dp"
            android:background="@drawable/login_btn"
            android:text="SIGN IN" />
        <LinearLayout
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_forgot_password"
                android:layout_margin="4dp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_style"
                android:layout_weight="1"
                android:clickable="true"
                android:padding="12dp"
                style="@style/TextAppearance.AppCompat.Small"
                android:text="@string/forgot_password"/>

            <TextView

                android:id="@+id/txt_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/textview_style"
                android:clickable="true"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/register" />

        </LinearLayout>
        <TextView
            android:id="@+id/txt_or"
            android:textColor="@color/grey_1000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="or"
            android:gravity="center"/>
        <com.google.android.gms.common.SignInButton
            android:id="@+id/g_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_gravity="center"/>


        <com.facebook.login.widget.LoginButton
            android:id="@+id/f_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp" />
    </LinearLayout>

</LinearLayout>